Fixed Image not found alignment in PDP

--- a/packages/scandipwa/src/component/ProductAttributeValue/ProductAttributeValue.style.scss
+++ b/packages/scandipwa/src/component/ProductAttributeValue/ProductAttributeValue.style.scss
@@ -247,5 +247,9 @@
         white-space: break-spaces;
         padding-inline-start: 4px;
     }
+
+    .Image-Content {
+        text-align: inherit;
+    }
 }
 
